--- a/source/components/ribbon-button/ribbon-button.html
+++ b/source/components/ribbon-button/ribbon-button.html
@@ -1,4 +1,4 @@
 <button class="ribbon-button-wrapper" ng-click="ribbonButton.onClick()">
-    <img src="{{ribbonButton.data.imgUrl}}" alt="folder">
+    <img ng-src="{{ribbonButton.data.imgUrl}}" alt="folder">
     <p>{{ribbonButton.data.label}}</p>
 </button>
