--- a/source/components/wi-toolbar/wi-toolbar.html
+++ b/source/components/wi-toolbar/wi-toolbar.html
@@ -1,4 +1,4 @@
-<wi-button data="wiToolbar.dataConfig[0]"></wi-button>
-<wi-button data="wiToolbar.dataConfig[1]"></wi-button>
-<wi-button data="wiToolbar.dataConfig[2]"></wi-button>
-<wi-button data="wiToolbar.dataConfig[3]"></wi-button>
+<wi-button data="wiToolbar.data.buttons[0]"></wi-button>
+<wi-button data="wiToolbar.data.buttons[1]"></wi-button>
+<wi-button data="wiToolbar.data.buttons[2]"></wi-button>
+<wi-button data="wiToolbar.data.buttons[3]"></wi-button>
