tab view add dynamic content

--- a/source/components/wi-ribbon/wi-ribbon.html
+++ b/source/components/wi-ribbon/wi-ribbon.html
@@ -1,14 +1,10 @@
 <uib-tabset class="tabbable">
-    <uib-tab heading="{{wiRibbon.tabs[0].name}}" ng-attr-active="wiRibbon.tabs[0].active">
+    <uib-tab heading="{{tab.name}}" ng-attr-active="tab.active" ng-repeat="tab in wiRibbon.tabs track by $index">
         <div class="row">
         </div>
     </uib-tab>
 
-    <uib-tab heading="{{wiRibbon.tabs[1].name}}" ng-attr-active="wiRibbon.tabs[1].active">
-        <div class="row">
-        </div>
-    </uib-tab>
 </uib-tabset>
 
-<wi-toolbar ng-show="wiRibbon.tabs[0].active" data="wiRibbon.tabs[0]"></wi-toolbar>
-<wi-toolbar ng-show="wiRibbon.tabs[1].active" data="wiRibbon.tabs[1]"></wi-toolbar>
+<wi-toolbar ng-show="toolbar.active" data="toolbar"
+            ng-repeat="toolbar in wiRibbon.tabs"></wi-toolbar>
