update tab info & download libs to local

--- a/source/components/wi-button/wi-button.html
+++ b/source/components/wi-button/wi-button.html
@@ -1,4 +1,8 @@
-<button class="wi-button-wrapper" ng-click="wiButton.onClick()">
-    <img class="img-button" ng-src="{{wiButton.data.imgUrl}}" alt="folder">
-    <p class="label-button">{{wiButton.data.label}}</p>
-</button>
+<div>
+    <button ng-click="wiButton.handlers.onclick()" ng-mouseover="wiButton.handlers.onmouseover()">
+        <img class="{{wiButton.layout || wiButton.config.layout}}"
+             ng-src="{{wiButton.imgurl || wiButton.config.imgUrl}}" alt="folder">
+        <p class="{{wiButton.layout || wiButton.config.layout}}">{{wiButton.label || wiButton.config.label}}</p>
+    </button>
+
+</div>
