--- a/source/components/wi-toolbar/wi-toolbar.html
+++ b/source/components/wi-toolbar/wi-toolbar.html
@@ -1,1 +1,4 @@
-<wi-button data="btn" ng-repeat="btn in wiToolbar.data.buttons"></wi-button>
+<div>
+
+</div>
+<!--<wi-button config="btn" ng-repeat="btn in wiToolbar.data.buttons"></wi-button>-->
