--- a/source/components/wi-button/wi-button.html
+++ b/source/components/wi-button/wi-button.html
@@ -1,4 +1,4 @@
-<div>
+<div ng-transclude style="display: inline-block">
     <button ng-click="wiButton.handlers.onclick()" ng-mouseover="wiButton.handlers.onmouseover()">
         <img class="{{wiButton.layout || wiButton.config.layout}}"
              ng-src="{{wiButton.imgurl || wiButton.config.imgUrl}}" alt="folder">
