--- a/source/components/wi-button/wi-button.html
+++ b/source/components/wi-button/wi-button.html
@@ -1,8 +1,7 @@
-<div ng-transclude style="display: inline-block">
+<div style="display: inline-block">
     <button ng-click="wiButton.handlers.onclick()" ng-mouseover="wiButton.handlers.onmouseover()">
         <img class="{{wiButton.layout || wiButton.config.layout}}"
              ng-src="{{wiButton.imgurl || wiButton.config.imgUrl}}" alt="folder">
         <p class="{{wiButton.layout || wiButton.config.layout}}">{{wiButton.label || wiButton.config.label}}</p>
     </button>
-
 </div>
