update: component module & browserify

--- a/source/components/wi-button/wi-buttons.less
+++ b/source/components/wi-button/wi-buttons.less
@@ -1,21 +1,22 @@
-wi-button {
-  & > div {
-    display:block;
-    & > button {
-      margin: 5px;
-      display: inline-block;
-      & > img {
-        margin:auto;
-      }
-      & > p {
-        font-size: 12px;
-      }
+wi-button, wi-toolbar-button {
+    display: inline-block;
+    & > div {
+        display:block;
+        & > button {
+            display: inline-block;
+            & > img {
+                margin:auto;
+            }
+            & > p {
+                font-size: 12px;
+            }
+        }
     }
-
-  }
 }
 
-.icon-top { display:block;}
+.icon-top { 
+    display:block;
+}
 .icon-left {
   display: inline-block;
   margin: 0;
