--- a/source/components/wi-toolbar/wi-toolbar.html
+++ b/source/components/wi-toolbar/wi-toolbar.html
@@ -1,6 +1,5 @@
 <!--<wi-button config="btn" ng-repeat="btn in wiToolbar.Btns" ng-transclude></wi-button>-->
-<div style="border: 1px solid green">
-    <div ng-transclude style="display: inline-block"></div>
-    <div style="height: 1px; border: 1px solid blue"></div>
-    <div style="text-align: center">{{wiToolbar.label}}</div>
+<div>
+    <div ng-transclude></div>
+    <div class='wi-label'>{{wiToolbar.label}}</div>
 </div>
