--- a/source/components/wi-button/wi-button-test.html
+++ b/source/components/wi-button/wi-button-test.html
@@ -1,13 +1,13 @@
 <html>
 <head>
     <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
-    <link href='css/wi-buttons.css' rel='stylesheet'>
+    <link href='css/wi-button.css' rel='stylesheet'>
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
     <script src="vendor/js/ui-bootstrap-tpls-0.14.3.js"></script>
 
-    <script src='js/main-buttons.js.bundle.js'></script>
+    <script src='js/main-button.js.bundle.js'></script>
     
     <title>Test button</title>
 </head>
