--- a/source/components/wi-toolbar/wi-toolbar-test.html
+++ b/source/components/wi-toolbar/wi-toolbar-test.html
@@ -2,7 +2,7 @@
 <head>
     <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
     <link href='css/wi-toolbar.css' rel='stylesheet'>
-    <link href='css/wi-buttons.css' rel='stylesheet'>
+    <link href='css/wi-button.css' rel='stylesheet'>
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
