--- a/source/components/wi-block/wi-block-test.html
+++ b/source/components/wi-block/wi-block-test.html
@@ -1,20 +1,20 @@
 <html>
 <head>
     <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
-    <link href='css/wi-buttons.css' rel='stylesheet'>
+    <link href='css/wi-button.css' rel='stylesheet'>
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
     <script src="vendor/js/ui-bootstrap-tpls-0.14.3.js"></script>
 
-    <script src='js/main-ribbon.js.bundle.js'></script>
+    <script src='js/main-block.js.bundle.js'></script>
 
     <title>Test button</title>
 </head>
 
 <body ng-app='helloapp'>
-<div ng-controller="WiRibbonController">
-    <wi-ribbon>
+<div ng-controller="WiBlockController">
+    <wi-block>
         <wi-button label="my button" layout="icon-left"
                    imgurl="img/32x32/project_new_32x32.png"
                    handlers="myHandlers">
@@ -27,7 +27,7 @@
                        imgurl="img/32x32/project_new_32x32.png"
                        handlers="myHandlers"></wi-button>
         </wi-toolbar>
-    </wi-ribbon>
+    </wi-block>
 </div>
 </body>
 </html>
