--- a/source/components/wi-tab/tabset.test.html
+++ b/source/components/wi-tab/tabset.test.html
@@ -7,47 +7,40 @@
     <script src="vendor/js/angular.min.js"></script>
     <script src="vendor/js/ui-bootstrap-tpls-0.14.3.js"></script>
 
-    <script src='js/main-ribbon.js.bundle.js'></script>
+    <script src="js/main-tab.js.bundle.js"></script>
 
     <title>Test button</title>
 </head>
 
 <body ng-app='helloapp'>
-<div ng-controller="WiRibbonController">
-    <wi-block>
-        <wi-tab label="toolbar1">
-            <wi-toolbar label="test">
-                <wi-button label="my button toobar" layout="icon-left"
-                           imgurl="img/32x32/project_new_32x32.png"
-                           handlers="myHandlers"></wi-button>
-                <wi-button label="my button toobar" layout="icon-top"
-                           imgurl="img/32x32/project_new_32x32.png"
-                           handlers="myHandlers"></wi-button>
-            </wi-toolbar>
-        </wi-tab>
-        <wi-tab label="toolbar1">
-            <wi-toolbar label="test">
-                <wi-button label="my button toobar" layout="icon-left"
-                           imgurl="img/32x32/project_new_32x32.png"
-                           handlers="myHandlers"></wi-button>
-                <wi-button label="my button toobar" layout="icon-top"
-                           imgurl="img/32x32/project_new_32x32.png"
-                           handlers="myHandlers"></wi-button>
-            </wi-toolbar>
-        </wi-tab>
-        <wi-tab label="toolbar1">
-            <wi-toolbar label="test">
-                <wi-button label="my button toobar" layout="icon-left"
-                           imgurl="img/32x32/project_new_32x32.png"
-                           handlers="myHandlers"></wi-button>
-                <wi-button label="my button toobar" layout="icon-top"
-                           imgurl="img/32x32/project_new_32x32.png"
-                           handlers="myHandlers"></wi-button>
-            </wi-toolbar>
-        </wi-tab>
 
+<div ng-controller="TestTabset">
 
-    </wi-block>
+    <uib-tabset active="activeForm">
+        <uib-tab index="0" heading="Form Tab">
+            <wi-toolbar label="test">
+                <wi-button label="my button toobar" layout="icon-left"
+                           imgurl="img/32x32/project_new_32x32.png"
+                           handlers="myHandlers"></wi-button>
+                <wi-button label="my button toobar" layout="icon-left"
+                           imgurl="img/32x32/project_new_32x32.png"
+                           handlers="myHandlers"></wi-button>
+            </wi-toolbar>
+        </uib-tab>
+        <uib-tab index="1" heading="Tab One">
+            <wi-toolbar label="test">
+                <wi-button label="my button toobar" layout="icon-top"
+                           imgurl="img/32x32/project_new_32x32.png"
+                           handlers="myHandlers"></wi-button>
+                <wi-button label="my button toobar" layout="icon-top"
+                           imgurl="img/32x32/project_new_32x32.png"
+                           handlers="myHandlers"></wi-button>
+            </wi-toolbar>
+        </uib-tab>
+        <uib-tab index="2" heading="Tab Two">
+            <p>More Tab Content</p>
+        </uib-tab>
+    </uib-tabset>
 </div>
 </body>
 </html>
