--- a/source/components/wi-toolbar/wi-toolbar-test.html
+++ b/source/components/wi-toolbar/wi-toolbar-test.html
@@ -13,8 +13,13 @@
 
 <body ng-app='helloapp'>
     <div ng-controller="WiDummy">
-        <wi-toolbar label="test">
+        <wi-toolbar label="Toolbar 1">
             <wi-button config="buttonCfg"></wi-button>
+            <wi-button config="buttonCfg"></wi-button>
+        </wi-toolbar>
+
+        <wi-toolbar label="Toolbar 2">
+            <wi-button config="buttonCfg2"></wi-button>
             <wi-button config="buttonCfg2"></wi-button>
         </wi-toolbar>
     </div>
