--- a/source/components/wi-toolbar/wi-toolbar.html
+++ b/source/components/wi-toolbar/wi-toolbar.html
@@ -1,4 +1,4 @@
-<div>
+<div class="toolbar-wrapper">
     <div ng-transclude></div>
-    <div class='wi-label'>{{wiToolbar.label}}</div>
+    <p class='wi-toolbar-label'>{{wiToolbar.label}}</p>
 </div>
