--- a/source/components/wi-toolbar/wi-toolbar.less
+++ b/source/components/wi-toolbar/wi-toolbar.less
@@ -5,10 +5,16 @@ wi-toolbar {
         background-color: #f0f0f0;
         & > div {
         }
-        & > div.wi-label {
+        & > .wi-toolbar-label {
             margin: 0.2em;
             padding: 0.2em;
             text-align: center;
+            width: 100%;
+            background-color: darkgray ;
         }
     }
+}
+
+.toolbar-wrapper {
+    margin: 1px;
 }
