--- a/source/components/uib-tab/uib-tab-test.html
+++ b/source/components/uib-tab/uib-tab-test.html
@@ -2,6 +2,7 @@
 <head>
     <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
     <link href='css/wi-button.css' rel='stylesheet'>
+    <link href='css/wi-toolbar.css' rel='stylesheet'>
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
@@ -17,8 +18,16 @@
 <div ng-controller="TestTabset">
 
     <uib-tabset active="activeForm">
-        <uib-tab index="0" heading="Form Tab">
-            <wi-toolbar label="test">
+        <uib-tab index="0" heading="Tab 1">
+            <wi-toolbar label="Project">
+                <wi-button label="my button toobar" layout="icon-left"
+                           imgurl="img/32x32/project_new_32x32.png"
+                           handlers="myHandlers"></wi-button>
+                <wi-button label="my button toobar" layout="icon-left"
+                           imgurl="img/32x32/project_new_32x32.png"
+                           handlers="myHandlers"></wi-button>
+            </wi-toolbar>
+            <wi-toolbar label="Well">
                 <wi-button label="my button toobar" layout="icon-left"
                            imgurl="img/32x32/project_new_32x32.png"
                            handlers="myHandlers"></wi-button>
@@ -27,8 +36,16 @@
                            handlers="myHandlers"></wi-button>
             </wi-toolbar>
         </uib-tab>
-        <uib-tab index="1" heading="Tab One">
-            <wi-toolbar label="test">
+        <uib-tab index="1" heading="Tab 2">
+            <wi-toolbar label="Project">
+                <wi-button label="my button toobar" layout="icon-left"
+                           imgurl="img/32x32/project_new_32x32.png"
+                           handlers="myHandlers"></wi-button>
+                <wi-button label="my button toobar" layout="icon-left"
+                           imgurl="img/32x32/project_new_32x32.png"
+                           handlers="myHandlers"></wi-button>
+            </wi-toolbar>
+            <wi-toolbar label="Well">
                 <wi-button label="my button toobar" layout="icon-top"
                            imgurl="img/32x32/project_new_32x32.png"
                            handlers="myHandlers"></wi-button>
@@ -37,7 +54,7 @@
                            handlers="myHandlers"></wi-button>
             </wi-toolbar>
         </uib-tab>
-        <uib-tab index="2" heading="Tab Two">
+        <uib-tab index="2" heading="Tab 3">
             <p>More Tab Content</p>
         </uib-tab>
     </uib-tabset>
