--- a/source/components/wi-list/wi-list.html
+++ b/source/components/wi-list/wi-list.html
@@ -4,4 +4,6 @@
         <td>{{item.key}}</td>
         <td>{{item.value}}</td>
     </tr>
+
+    <button ng-click="wiList.onclick()">Click me</button>
 </table>
