--- a/source/components/wi-treeview/wi-treeview-test.html
+++ b/source/components/wi-treeview/wi-treeview-test.html
@@ -12,7 +12,7 @@
 
     <script src='js/main-treeview.js.bundle.js'></script>
     
-    <title>Test treeeeeeee view</title>
+    <title>Test tree view</title>
 </head>
 
 <body ng-app='helloapp'>
