--- a/source/components/wi-treeview/wi-treeview.less
+++ b/source/components/wi-treeview/wi-treeview.less
@@ -3,7 +3,7 @@ wi-treeview {
 
     .wi-treeview-container {
         display: block;
-        padding-left: 2em;
+        padding-left: 5px;
         cursor: pointer;
     }
 
