--- a/source/components/wi-dropdown/wi-dropdown.less
+++ b/source/components/wi-dropdown/wi-dropdown.less
@@ -6,9 +6,9 @@ wi-dropdown {
     display: block;
   }
 
-  //.dropdown-menu {
-  //  min-width: 0;
-  //}
+  .dropdown-menu {
+    min-width: 0;
+  }
 
   .icon-left {
     display: inline-block;
