--- a/source/components/wi-slidingbar/wi-slidingbar-test.html
+++ b/source/components/wi-slidingbar/wi-slidingbar-test.html
@@ -25,7 +25,7 @@
            <div class="col-md-4" style="height: 50vh;">
                <wi-slidingbar>
                    <div>
-                       <p>Some thing is liked plot</p>
+                       <p>Some thing like plot</p>
                    </div>
                </wi-slidingbar>
            </div>
