--- a/source/components/wi-button/wi-button-test.html
+++ b/source/components/wi-button/wi-button-test.html
@@ -2,6 +2,8 @@
 <head>
     <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
     <link href='css/wi-button.css' rel='stylesheet'>
+    <link rel="stylesheet" href="css/sprite_32.css">
+    <link rel="stylesheet" href="css/sprite_16.css">
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
@@ -14,8 +16,11 @@
 
 <body ng-app='helloapp'>
 <div ng-controller="WiDummy">
-    <wi-button label="my button" layout="icon-left"
-               imgurl="img/32x32/project_new_32x32.png"
+    <wi-button label="New Project"
+               handlers="myHandlers">
+    </wi-button>
+    <wi-button label="Open Project" layout="icon-left"
+               icon="project-open-32x32"
                handlers="myHandlers">
     </wi-button>
 </div>
