update img, spriteCss

--- a/source/components/wi-button/wi-button-test.html
+++ b/source/components/wi-button/wi-button-test.html
@@ -16,11 +16,11 @@
 
 <body ng-app='helloapp'>
 <div ng-controller="WiDummy">
-    <wi-button label="New Project"
+    <wi-button label="Exit" icon="exit-32x32"
                handlers="myHandlers">
     </wi-button>
     <wi-button label="Open Project" layout="icon-left"
-               icon="project-open-32x32"
+               icon="project-open-16x16"
                handlers="myHandlers">
     </wi-button>
 </div>
