--- a/source/less/sprite_16.less
+++ b/source/less/sprite_16.less
@@ -15,7 +15,7 @@
 .curve-hide-16x16, .curve-input-16x16, .curve-interactive-baseline-edit-16x16, .curve-interactive-edit-16x16, .curve-listing-16x16, 
 .curve-new-16x16, .curve-properties-16x16, .curve-remove-16x16, .curve-rescale-16x16, .curve-show-hide-16x16, 
 .curve-splice-interactive-16x16, .curve-zone, .data-training-create-16x16, .delete-16x16, .delete-inactive-16x16, 
-.depth-axis-add-16x16, .depth-blank-16x16, .edit-curve-16x16, .effective-value-16x16, .exit, 
+.depth-axis-add-16x16, .depth-blank-16x16, .edit-curve-16x16, .effective-value-16x16, .exit-16x16,
 .expand-16x16, .expand-all-16x16, .fault, .file-export-16x16, .file-import-16x16, 
 .fit-to-height, .fit-to-page, .fit-to-width, .fluid-input-16x16, .fluid-zone, 
 .fracture-porosity-16x16, .fracture-porosity-permeability-16x16, .frequency-16x16, .group-16x16, .header-load-16x16, 
@@ -131,7 +131,7 @@
 .depth-blank-16x16 { background-position: -16px -80px; width: 16px; height: 16px; }
 .edit-curve-16x16 { background-position: -32px -80px; width: 16px; height: 16px; }
 .effective-value-16x16 { background-position: -48px -80px; width: 16px; height: 16px; }
-.exit { background-position: -64px -80px; width: 16px; height: 16px; }
+.exit-16x16 { background-position: -64px -80px; width: 16px; height: 16px; }
 .expand-16x16 { background-position: -80px -80px; width: 16px; height: 16px; }
 .expand-all-16x16 { background-position: -96px -80px; width: 16px; height: 16px; }
 .fault { background-position: -112px -80px; width: 16px; height: 16px; }
