--- a/source/less/sprite_32.less
+++ b/source/less/sprite_32.less
@@ -14,7 +14,7 @@
 .curve-interactive-edit-32x32, .curve-listing-32x32, .curve-new-32x32, .curve-properties-32x32, .curve-remove-32x32, 
 .curve-rescale-32x32, .curve-show-hide-32x32, .curve-splice-32x32, .curve-splice-interactive-32x32, .curve-zone, 
 .data-training-create-32x32, .delete-32x32, .delete-inactive-32x32, .depth-axis-add-32x32, .depth-blank-32x32, 
-.edit-curve-32x32, .effective-value-32x32, .exit, .fault, .file-export-32x32, 
+.edit-curve-32x32, .effective-value-32x32, .exit-32x32, .fault, .file-export-32x32,
 .file-import-32x32, .fit-to-height, .fit-to-page, .fit-to-width, .fluid-input-32x32, 
 .fluid-zone, .fracture-porosity-permeability-32x32, .frequency-32x32, .header-load-32x32, .help-32x32, 
 .histogram-blank-32x32, .histogram-multi-32x32, .histogram-new-32x32, .histogram-predefine-32x32, .histogram-predefine-dt-32x32, 
@@ -119,7 +119,7 @@
 .depth-blank-32x32 { background-position: -0px -2208px; width: 32px; height: 32px; }
 .edit-curve-32x32 { background-position: -0px -2240px; width: 32px; height: 32px; }
 .effective-value-32x32 { background-position: -0px -2272px; width: 32px; height: 32px; }
-.exit { background-position: -0px -2304px; width: 32px; height: 32px; }
+.exit-32x32 { background-position: -0px -2304px; width: 32px; height: 32px; }
 .fault { background-position: -0px -2336px; width: 32px; height: 32px; }
 .file-export-32x32 { background-position: -0px -2368px; width: 32px; height: 32px; }
 .file-import-32x32 { background-position: -0px -2400px; width: 32px; height: 32px; }
