update Wi-UI.xlsx, add filter

--- a/source/components/wi-button/wi-button-test.html
+++ b/source/components/wi-button/wi-button-test.html
@@ -17,7 +17,7 @@
 
 <body ng-app='helloapp'>
 <div ng-controller="WiDummy">
-    <div ng-repeat="btn in ProjectTab | filter:'wiButton'">
+    <div ng-repeat="btn in ProjectTab | filter:{Dependency:'wiButton'}">
         <wi-button label="{{btn.label}}" icon="{{btn.icon}}"
                   handlers="myHandlers">
         </wi-button>
