--- a/source/components/wi-slidingbar/wi-slidingbar-test.html
+++ b/source/components/wi-slidingbar/wi-slidingbar-test.html
@@ -22,7 +22,7 @@
 <div ng-controller="WiDummy">
     <div class="container">
         <div class="row">
-           <div class="col-md-4" style="height: 50vh;">
+           <div class="col-md-4" style="height: 500px; width: 150px;">
                <wi-slidingbar>
                    <div>
                        <p>Some thing like plot</p>
