--- a/source/components/wi-treeview/wi-treeview.html
+++ b/source/components/wi-treeview/wi-treeview.html
@@ -1,7 +1,7 @@
-<div class="wi-treeview-container" ng-repeat="item in wiTreeview.config">
+<div class="wi-treeview-container" ng-repeat="item in wiTreeview.config track by $index">
     <div class="wi-parent-node"
          ng-click="item.data.childExpanded = !item.data.childExpanded"
-         ng-dblclick="wiTreeview.onSelectItem()">
+         ng-dblclick="wiTreeview.onSelectItem($index)">
         <i aria-hidden="true" class="fa icon-expanded"
            ng-class="
            {'fa-caret-down': item.data.childExpanded,
