push new tab from treeview

--- a/source/components/wi-tabs/wi-tab.less
+++ b/source/components/wi-tabs/wi-tab.less
@@ -1,4 +1,11 @@
 wi-tabset {
+
+  display: block;
+
+  wi-tab {
+    display: block;
+  }
+
   li.wi-tab.active {
     border: 1px solid #ddd;
     border-bottom-color: transparent;
