--- a/source/components/wi-button/wi-button.less
+++ b/source/components/wi-button/wi-button.less
@@ -3,6 +3,7 @@ wi-button, wi-toolbar-button {
     & > div {
         display:block;
         & > button {
+            background-color: green;
             display: inline-block;
             & > img {
                 margin:auto;
