--- a/source/components/wi-toolbar/wi-toolbar.less
+++ b/source/components/wi-toolbar/wi-toolbar.less
@@ -10,7 +10,7 @@ wi-toolbar {
             padding: 0.2em;
             text-align: center;
             width: 100%;
-            background-color: darkgray ;
+            background-color: yellow ;
         }
     }
 }
