fix wi dropdown

--- a/source/components/wi-button/wi-button.html
+++ b/source/components/wi-button/wi-button.html
@@ -1,7 +1,6 @@
 <div>
     <button ng-click="wiButton.handlers.onclick()" ng-mouseover="wiButton.handlers.onmouseover()">
-        <img class="{{wiButton.icon || wiButton.config.icon || wiButton.default.icon}}"
-             ng-class="{{wiButton.layout || wiButton.config.layout || wiButton.default.layout}}" alt="icon">
+        <img class="{{wiButton.icon || wiButton.config.icon || wiButton.default.icon}}" alt="icon">
         <p class="{{wiButton.layout || wiButton.config.layout || wiButton.default.layout}}">{{wiButton.label || wiButton.config.label}}</p>
     </button>
 </div>
