config wi-button && update gulp watch

--- a/source/components/wi-button/wi-button.html
+++ b/source/components/wi-button/wi-button.html
@@ -1,6 +1,7 @@
 <div>
-    <button ng-click="wiButton.handlers.onclick()" ng-mouseover="wiButton.handlers.onmouseover()">
-        <img class="{{wiButton.icon || wiButton.config.icon || wiButton.default.icon}}" alt="icon">
-        <p class="{{wiButton.layout || wiButton.config.layout || wiButton.default.layout}}">{{wiButton.label || wiButton.config.label}}</p>
+    <button ng-click="wiButton.onClick()">
+        <img class="{{wiButton.icon || wiButton.config.icon || wiButton.default.icon}}" alt="icon wi-button">
+        <p class="{{wiButton.layout || wiButton.config.layout || wiButton.default.layout}}">
+            {{wiButton.label || wiButton.config.label || wiButton.default.label}}</p>
     </button>
 </div>
