--- a/source/app/components/wi-logplot/wi-logplot.html
+++ b/source/app/components/wi-logplot/wi-logplot.html
@@ -1,1 +1,7 @@
-<p>hello logplot</p>
+<wi-toolbar></wi-toolbar>
+<div class="logplot-working-space">
+    <wi-slidingbar>
+        <p>Some thing like curve</p>
+    </wi-slidingbar>
+    <div class="logplot-track-container"></div>
+</div>
