--- a/source/components/wi-slidingbar/wi-slidingbar-test.html
+++ b/source/components/wi-slidingbar/wi-slidingbar-test.html
@@ -20,16 +20,15 @@
 
 <body ng-app='helloapp'>
 <div ng-controller="WiDummy">
-    <div class="container">
-        <div class="row">
-           <div class="col-md-4" style="height: 500px; width: 150px;">
-               <wi-slidingbar>
-                   <div>
-                       <p>Some thing like plot</p>
-                   </div>
-               </wi-slidingbar>
-           </div>
-        </div>
+    <div class="container" style="height: 500px; background-color: #5e5e5e">
+        <wi-slidingbar>
+            <div>
+                <p>Some thing like plot</p>
+                <p>Some thing like plot</p>
+                <p>Some thing like plot</p>
+                <p>Some thing like plot</p>
+            </div>
+        </wi-slidingbar>
     </div>
 </div>
 </body>
