--- a/source/components/wi-slidingbar/wi-slidingbar.html
+++ b/source/components/wi-slidingbar/wi-slidingbar.html
@@ -1,4 +1,2 @@
-<div class="sliding-container" id="sliding-container">
-    <div class="sliding-content" ng-transclude></div>
-    <div id="tiny-screen" class="ui-widget-content"></div>
-</div>
+<div class="below-sliding-content" ng-transclude></div>
+<div id="tiny-screen" class="ui-widget-content"></div>
