--- a/source/components/wi-slidingbar/wi-slidingbar.less
+++ b/source/components/wi-slidingbar/wi-slidingbar.less
@@ -1,19 +1,18 @@
 wi-slidingbar {
   position: relative;
   display: block;
-
-  .sliding-container {
-    height: 100%;
-    background-color: #2b542c;
-    overflow: hidden;
-  }
+  height: 100%;
+  width: 150px;
+  background-color: #2b542c;
+  overflow: hidden;
 
   .ui-widget-content {
     height: 150px;
+    width: 150px;
     background-color: transparent;
   }
 
-  .sliding-content {
+  .below-sliding-content {
     position: absolute;
     top: 0;
     bottom: 0;
