--- a/source/app/components/wi-logplot/wi-logplot-test.html
+++ b/source/app/components/wi-logplot/wi-logplot-test.html
@@ -7,11 +7,14 @@
     <link href='css/main.css' rel='stylesheet'>
     <link href='css/wi-button.css' rel='stylesheet'>
     <link href='css/wi-toolbar.css' rel='stylesheet'>
+    <link href='css/wi-slidingbar.css' rel='stylesheet'>
     <link href='css/wi-logplot.css' rel='stylesheet'>
 
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
+
+    <script src="vendor/js/jquery-ui.js"></script>
 
     <script src="js/main-logplot.js.bundle.js"></script>
 
