commit cuoi tuan <3

--- a/source/app/components/wi-logplot/wi-logplot.html
+++ b/source/app/components/wi-logplot/wi-logplot.html
@@ -1,4 +1,7 @@
-<wi-toolbar></wi-toolbar>
+<wi-toolbar label="">
+    <wi-button layout="icon-left"></wi-button>
+    <wi-button layout="icon-left"></wi-button>
+</wi-toolbar>
 <div class="logplot-working-space">
     <wi-slidingbar>
         <p>Some thing like curve</p>
