--- a/source/components/wi-slidingbar/wi-slidingbar.less
+++ b/source/components/wi-slidingbar/wi-slidingbar.less
@@ -7,16 +7,16 @@ wi-slidingbar {
   overflow: hidden;
 
   .ui-widget-content {
-    height: 150px;
-    width: 150px;
+    width: 100%;
     background-color: transparent;
   }
 
-  .below-sliding-content {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+  #sliding-bar-content {
+    position:absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    overflow:hidden;
   }
 }
