--- a/source/app/components/wi-logplot/wi-logplot-test.html
+++ b/source/app/components/wi-logplot/wi-logplot-test.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/css/jquery-ui.css" rel="stylesheet">
     <link href="vendor/css/font-awesome.min.css" rel="stylesheet">
     <link href="vendor/css/themify-icons.css" rel="stylesheet">
 
@@ -10,21 +11,27 @@
     <link href='css/wi-slidingbar.css' rel='stylesheet'>
     <link href='css/wi-logplot.css' rel='stylesheet'>
 
+    <link rel="stylesheet" href="css/sprite_32.css">
+    <link rel="stylesheet" href="css/sprite_16.css">
+
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
 
     <script src="vendor/js/jquery-ui.js"></script>
 
+
     <script src="js/main-logplot.js.bundle.js"></script>
 
-    <title>Test button</title>
+    <title>Test</title>
 </head>
 
 <body ng-app='helloapp'>
 
 <div ng-controller="WiDummy">
-    <wi-logplot></wi-logplot>
+    <div style="width: 1000px; height: 500px; border: 1px solid green">
+        <wi-logplot></wi-logplot>
+    </div>
 </div>
 </body>
 </html>
