--- a/source/components/wi-slidingbar/wi-slidingbar.html
+++ b/source/components/wi-slidingbar/wi-slidingbar.html
@@ -1,2 +1,2 @@
-<div class="below-sliding-content" ng-transclude></div>
-<div id="tiny-screen" class="ui-widget-content"></div>
+<div id="sliding-bar-content" ng-transclude></div>
+<div id="sliding-handle" class="ui-widget-content"></div>
