slidingbar: fix bug when first time drag

--- a/source/components/wi-slidingbar/wi-slidingbar-test.html
+++ b/source/components/wi-slidingbar/wi-slidingbar-test.html
@@ -30,7 +30,9 @@
             </div>
         </wi-slidingbar>
     </div>
-    <h1>{{top}} -- {{range}}</h1>
+
+    <h1>{{wiSlidingbar.top}} -- {{wiSlidingbar.range}}</h1>
+    <h1>{{wiSlidingbar}}</h1>
 </div>
 </body>
 </html>
