wi-slindingbar: full handle-sliding-bar

--- a/source/components/wi-slidingbar/wi-slidingbar.html
+++ b/source/components/wi-slidingbar/wi-slidingbar.html
@@ -1,2 +1,4 @@
 <div id="sliding-bar-content" ng-transclude></div>
-<div id="sliding-handle" class="ui-widget-content"></div>
+<div id="sliding-handle" class="ui-widget-content">
+    <div class="sliding-handler-border"></div>
+</div>
