--- a/source/components/wi-slidingbar/wi-slidingbar.less
+++ b/source/components/wi-slidingbar/wi-slidingbar.less
@@ -12,11 +12,24 @@ wi-slidingbar {
   }
 
   #sliding-bar-content {
-    position:absolute;
-    top:0;
-    left:0;
-    right:0;
-    bottom:0;
-    overflow:hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow: hidden;
+  }
+
+  #sliding-handle {
+    border: 0;
+  }
+
+  .sliding-handler-border {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border: 1px solid white;
   }
 }
