--- a/source/app/components/wi-logplot/wi-logplot.html
+++ b/source/app/components/wi-logplot/wi-logplot.html
@@ -1,7 +1,13 @@
-<wi-toolbar label="">
-    <wi-button layout="icon-left"></wi-button>
-    <wi-button layout="icon-left"></wi-button>
-</wi-toolbar>
+<div class="toolbar-logplot-wrapper">
+    <wi-toolbar label="">
+        <wi-button layout="icon-left"></wi-button>
+        <wi-button layout="icon-left"></wi-button>
+    </wi-toolbar>
+    <wi-toolbar label="">
+        <wi-button layout="icon-left"></wi-button>
+        <wi-button layout="icon-left"></wi-button>
+    </wi-toolbar>
+</div>
 <div class="logplot-working-space">
     <wi-slidingbar>
         <p>Some thing like curve</p>
