--- a/source/components/wi-toolbar/wi-toolbar.html
+++ b/source/components/wi-toolbar/wi-toolbar.html
@@ -1,4 +1,4 @@
 <div class="toolbar-wrapper">
     <div ng-transclude></div>
-    <p class='wi-toolbar-label'>{{wiToolbar.label}}</p>
+    <p class='wi-toolbar-label' ng-show="wiToolbar.label && wiToolbar.label.length > 0">{{wiToolbar.label}}</p>
 </div>
