wi-logplot: done separate layout

--- a/source/app/components/wi-logplot/wi-logplot.html
+++ b/source/app/components/wi-logplot/wi-logplot.html
@@ -1,16 +1,16 @@
-<div class="toolbar-logplot-wrapper">
-    <wi-toolbar label="">
+<div class="logplot-toolbar-wrapper">
+    <wi-toolbal>
         <wi-button layout="icon-left"></wi-button>
         <wi-button layout="icon-left"></wi-button>
-    </wi-toolbar>
-    <wi-toolbar label="">
+    </wi-toolbal>
+    <wi-toolbar>
         <wi-button layout="icon-left"></wi-button>
         <wi-button layout="icon-left"></wi-button>
     </wi-toolbar>
 </div>
-<div class="logplot-working-space">
+<div class="logplot-main-content">
     <wi-slidingbar>
         <p>Some thing like curve</p>
     </wi-slidingbar>
-    <div class="logplot-track-container"></div>
+    <div class="logplot-sub-content">main content</div>
 </div>
