wi-logplot: done separate layout with wi-slidingbar

--- a/source/app/components/wi-logplot/wi-logplot-test.html
+++ b/source/app/components/wi-logplot/wi-logplot-test.html
@@ -29,8 +29,8 @@
 <body ng-app='helloapp'>
 
 <div ng-controller="WiDummy">
-    <div style="width: 1000px; height: 500px; border: 1px solid green">
-        <wi-logplot></wi-logplot>
+    <div style="width: 1000px; height: 500px; border: 1px solid green; display: flex">
+        <wi-logplot style="flex: 1"></wi-logplot>
     </div>
 </div>
 </body>
