--- a/source/app/components/wi-workingtab/wi-workingtab.html
+++ b/source/app/components/wi-workingtab/wi-workingtab.html
@@ -1,1 +1,1 @@
-<div ng-transclude ng-show="wiWorkingtab.active"></div>
+<div class="wi-workingtab-content" ng-transclude ng-show="wiWorkingtab.active"></div>
