wi-logplot: done separate layout with wi-slidingbar

--- a/source/app/components/wi-logplot/wi-logplot.html
+++ b/source/app/components/wi-logplot/wi-logplot.html
@@ -12,5 +12,5 @@
     <wi-slidingbar>
         <p>Some thing like curve</p>
     </wi-slidingbar>
-    <div class="logplot-sub-content">main content</div>
+    <div class="logplot-sub-content">Some tracks: {{wiLogplot.wiSlidingbar.top}} -- {{wiLogplot.wiSlidingbar.range}}</div>
 </div>
