--- a/source/components/wi-button/wi-button.html
+++ b/source/components/wi-button/wi-button.html
@@ -1,7 +1,8 @@
 <div>
     <button ng-click="wiButton.onClick()">
         <img class="{{wiButton.icon || wiButton.config.icon || wiButton.default.icon}}" alt="icon wi-button">
-        <p class="{{wiButton.layout || wiButton.config.layout || wiButton.default.layout}}">
+        <p class="{{wiButton.layout || wiButton.config.layout || wiButton.default.layout}}"
+        ng-show="wiButton.label != null || wiButton.config.label != null">
             {{wiButton.label || wiButton.config.label || wiButton.default.label}}</p>
     </button>
 </div>
