Change file wi-button-test.html

--- a/source/components/wi-button/wi-button-test.html
+++ b/source/components/wi-button/wi-button-test.html
@@ -17,7 +17,7 @@
 
 <body ng-app='helloapp'>
 <div ng-controller="WiDummy">
-    <wi-button label="Test button" icon="project-new-32x32" layout='icon-top'
+    <wi-button label="Test button" icon="project-new-32x32" layout='icon-left'
                handler="myHandler"></wi-button>
 
     <wi-button label="Test button 2" icon="project-new-32x32" layout='icon-left'
