wi-list: add wiList to explorer block

--- a/source/less/workspace-block/explorer-block.less
+++ b/source/less/workspace-block/explorer-block.less
@@ -1,5 +1,14 @@
 .explorer-block {
-  display: block;
+  display: flex;
+  flex-direction: column;
   width: 240px;
   border: 2px solid #5e5e5e;
+
+  wi-treeview {
+    flex: 1;
+  }
+
+  wi-list {
+    flex: 1;
+  }
 }
